2009-08-31  Jochen Rau <jochen.rau@typoplanet.de>

	* Added feature #7984: Besides stdWrap.crop there is now a function stdWrap.cropHTML that is aware of HTML tags (same options)

2009-08-31  Oliver Hader  <oliver@typo3.org>

	* Cleanup: Set SVN properties and tags
	* Follow-up to feature #9897: Added unit tests for addFieldsToPalette() and addToAllTCAtypes() in t3lib_extMgm
	* Follow-up to feature #9897: Extended unit tests for adding fields in t3lib_extMgm

2009-08-31  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #11810: Workspace indicator bar does not cover the full width of the page tree

2009-08-31  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #11717: Filelist module doesn't work in IE6 (thanks to Steffen Gebert)

2009-08-31  Steffen Kamper  <info@sk-typo3.de>

	* Follow-up to #10853: New Multimedia CE
	* Added feature #10853: New Multimedia CE
	* Added feature #11374: Add Linebreak in Palette of TCEFORMS

2009-08-30  Oliver Hader  <oliver@typo3.org>

	* Added feature #9292: Integrate hook at the end of tslib_cObj::getImgResource
	* Follow-up to feature #9292: Added unit test for getImgResource hook

2009-08-30  Christian Kuhn  <lolli@schwarzbu.ch>

	* Follow-up to #11431: Unit test for getPage_preProcess hook
	* Added feature #11431: Hook to manipulate the page request in method getPage of class t3lib_pageSelect

2009-08-30  Rupert Germann  <rupi@gmx.li>

	* Fixed bug #11808: Increase performance using mbstring in t3lib_cs->crop (thanks to Timo Schmidt)

2009-08-29  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #11804: Upgrade wizard does not install opendocs as system extension (thanks to Steffen Gebert)

2009-08-28  Ingo Renner  <ingo@typo3.org>

	* Added feature #11784: Change existing messages in the Template Object Browser top use flash messages
	* Added feature #11783: Change existing warning boxes to use flash messages

2009-08-28  Steffen Kamper  <info@sk-typo3.de>
